--- a/index.css
+++ b/index.css
@@ -2,69 +2,69 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "游ゴシック Medium", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
-	line-height: 1.6;
-    font-size: 16px;
 }
-#header-container {
-  margin: 0 auto;
-  width: 694px;
+#outer {
+	padding: 0;
+	border-top: 2px solid #7a9f37;
+	line-height: 1.6;
 }
 header {
-	background-color: #214555;
+	padding: 0;
+	border-bottom: 1px #ccc solid;
 }
-#head-inner {
-    padding: 25px 0;
+#content {
+	background-color: #f8f9fa;
 }
-h1 {
-	font-size: 26px;
-	font-weight: bold;
-	padding: 10px 0 0 0;
-	margin: 0;
-	color: #f3e6d2;
-}
-h1 a {
-	font-weight: bold;
-	color: #f3e6d2;
-	text-decoration: none;
-}
-h1 a:hover {
-	color: #e8f3f9;
-	text-decoration: none;
-}
-.description {
-	line-height: 1.2;
-	color: #f3f2eb;
-	margin: 0.5em 0 1em 0;
-}
-h2 {
-	font-size: 22px;
-	margin: 0;
-	padding: 4px 0;
-	border-bottom: 1px solid #999;
-}
-#content-wrapper {margin: 0 auto;
-    width: 694px;}
 main {
-	color: #333;
+	display: block;
+	background-color: #fff;
+	margin: 0 auto;
+	width: 800px;
+	padding: 0;
 }
 #inner {
-	padding: 20px 0 0 0;
+	padding: 16px 30px;
+}
+aside {
+	margin: 0 auto;
+	width: 800px;
+	padding: 0;
+	overflow: auto;
+	background-color: #fff;
+}
+#aside-inner {
+	padding: 0 30px;
+}
+#left {
+	float: left;
+	width: 48%;
+}
+#right {
+	width: 48%;
+	float: right;
+	box-sizing: border-box;
 }
 ul {
-	margin: 0 0 0 1em;
+	margin: 1em 0 1em 1.5em;
+	padding: 0;
+}
+ol {
+	margin: 0 0 0 2em;
 	padding: 0;
 }
 li {
-	list-style: disc;
+	list-style: none;
+}
+ol li {
+	list-style-type: decimal;
 }
 p {
 	margin: 1em 0;
+	word-wrap: break-word;
 }
 img {
 	max-width: 100%;
 	height: auto;
-	border: 0;
 }
 hr {
 	border-width: 1px 0 0 0;
@@ -73,96 +73,227 @@ hr {
 	height: 1px;
 }
 a {
-	font-weight: normal;
-}
-aside {
-
-}
-#middle-inner {
-	padding: 20px 0 20px 0;
-}
-.side-title {
-	padding: 7px 16px 7px 16px;
-	background-color: #f1f1f1;
-	color: #333;
-	font-weight: bold;
-	border: 1px solid #ccc;
-	margin-bottom: 10px;
-	border-radius: 5px;
-}
-.side {
-	margin: 0 0 10px 0;
-	padding: 2px 8px 8px 7px;
-	background-color: #fcfcfc;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-	border-radius: 5px;
-}
-.side ul {
-	margin: 0 0 0 10px;
-	padding: 0;
-}
-.side li {
-	list-style: none;
-	margin-bottom: 0.5em;
-}
-.side li a {
-	text-decoration: none;
-	color: #214555;
-}
-.side li a:hover {
+	color: #03c;
 	text-decoration: underline;
 }
-footer {
-	font-size: 15px;
-	height: 100px;
-	clear: both;
-	text-align: center;
+a:hover {
+	color: #224495;
+	text-decoration: none;
 }
-blockquote {
-	border: 1px solid #ccc;
-	padding: 5px;
-	margin: 10px;
+#logo {
+	font-size: 16px;
+	padding: 22px 0 22px 0;
+	margin: 0 auto;
+	width: 740px;
 }
-@media screen and (max-width: 767px) {
-#header-container {
-    margin: 0;
-	width: 100%;
+#logo a {
+	font-weight: bold;
+	color: rgba(0, 0, 0, 1);
+	text-decoration: none;
 }
-header {
-
-}
-#head-inner {
-    padding: 25px 10px;
-	background-color: #214555;
-}
-.description {
-}
-#content-wrapper {
-margin: 0;
-	width: 100%;}
-main {
-width: 100%;
-	color: #333;
-}
-#inner {
-	padding: 20px 10px 0 10px;
-}
-aside {
-width: 100%;
-}
-#middle-inner {
-	padding: 10px 10px 20px 10px;
+#logo a:hover {
+	text-decoration: underline;
 }
 h1 {
+	font-size: 26px;
+	padding: 0;
+	margin: 0;
+}
+h2 {
+	margin: 0;
+	font-size: 24px;
+	padding: 0;
+	border-bottom: 1px solid #ccc;
+}
+.title {
+	font-size: 18px;
+	color: #333;
+	padding: 5px 0;
+	font-weight: bold;
+}
+.side {
+	padding: 0 0 10px 0;
+}
+.side ul {
+	margin: 0.3em 0 1em 1em;
+}
+.side li {
+	line-height: 1.6;
+}
+.side li a {
+	color: #1155cc;
+	text-decoration: none;
+}
+.side li a:hover {
+	color: #224495;
+	text-decoration: underline;
+}
+.title a {
+	text-decoration: none;
+	color: #363636;
+}
+.title a:hover {
+	text-decoration: underline;
+	color: #0036c6;
+}
+.title:after {
+	content: ">";
+	color: #ccc;
+	font-weight: bold;
+	padding-left: 9px;
+}
+footer {
+	padding-top: 20px;
+	height: 150px;
+	clear: left;
+	text-align: center;
+	position: relative;
+	border-top: 1px #e3e3e3 solid;
+}
+footer a {
+	color: #444;
+	text-decoration: none;
+}
+footer a:hover {
+	color: #036;
+	text-decoration: underline;
+}
+@media screen and (min-width:768px) and (max-width:1024px) {
+#outer {
+	width: 100%;
+	padding: 0;
+	font-size: 100%;
+	margin: 0;
+}
+header {
+	padding: 0 30px 10px 30px;
+}
+#logo {
+	width: auto;
+}
+main {
+	width: 100%;
+	padding: 0;
+}
+#inner {
+	padding: 0 30px 10px 30px;
+}
+aside {
+	width: 100%;
+	padding: 0;
+}
+.side {
+	padding: 0;
+	font-size: 100%;
+}
+footer {
+	font-size: 14px;
+}
+}
+@media screen and (max-device-width: 480px) {
+#outer {
+	width: 100%;
+	font-size: 100%;
+	padding: 0;
+	margin: 0;
+	border-left: none;
+	border-right: none;
+}
+header {
+	font-size: 100%;
+	padding: 0;
+	margin: 0;
+}
+#logo {
+	width: 94%;
+	padding: 20px 0 10px 10px;
+	margin: 0;
+}
+h1 {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	line-height: 1.3;
 	font-size: 20px;
 }
 h2 {
+	margin: 10px 0 0 0;
+	padding: 5px 0 5px 0;
+	line-height: 1.3;
 	font-size: 18px;
 }
-h3 {
-	font-size: 16px;
+main {
+	font-size: 100%;
+	width: 100%;
 }
-h4 {
-	font-size: 14px;
+main a {
+	color: #006ccc;
+	font-weight: bold;
+}
+#inner {
+	padding: 0 10px 10px 10px;
+	margin: 0;
+}
+aside {
+	float: none;
+	width: 100%;
+}
+#aside-inner {
+	padding: 0;
+}
+#left {
+	margin: 0;
+	float: none;
+	width: 100%;
+	padding-left: 0;
+}
+#right {
+	margin: 0;
+	float: none;
+	width: 100%;
+	border-left: none;
+	padding-left: 0;
+	padding-right: 0;
+}
+.title {
+	margin-left: 0.2em;
+	border-bottom: 1px #ccc solid;
+	font-size: 120%;
+	padding: 3px 0 10px 6px;
+	width: auto;
+}
+.title a {
+	color: #006ccc;
+	text-decoration: none;
+}
+.side {
+	font-size: 87.5%;
+}
+.side ul {
+	margin: 0 0 1em 0.2em;
+}
+.side li {
+	list-style-image: none;
+	list-style: none;
+	padding: 0;
+	border-bottom: 1px #ccc solid;
+}
+.side li a {
+	height: 44px;
+	line-height: 44px;
+	padding: 0 0 0 8px;
+	color: #444;
+	display: block;
+	font-weight: bold;
+	text-decoration: none;
+}
+.side li a:hover {
+	color: #1155cc;
+}
+footer {
+	height: 150px;
+	padding: 0;
+	margin: 0;
+	border-top: none;
 }
 }
